--- a/style/style.less
+++ b/style/style.less
@@ -10,10 +10,13 @@ body {
 }
 
 .mainBlock {
+    &.noTransit {
+        transition:  none !important;
+    }
     section {
         min-height: 100vh;
         background-color: #f7f7f7;
-        padding: 5vh 0;
+        padding: 0;
     }
     i.circle {
         position: absolute;
@@ -154,6 +157,7 @@ section.sectionReady {
         color: #fff;
         display: flex;
         width: 90vh;
+        height: 90vh;
         border-radius: 50%;
         padding: 4em;
         align-items: center;
@@ -212,11 +216,18 @@ section.sectionReady {
         font-size: 3em;
         color: @color1;
         padding: 2em 0;
+        opacity: 0;
+        transition: opacity 1.5s;
     }
+    &.active .setupSteps {opacity: 1;}
 }
-
-.step1.swiper-slide-active a[data-slide="0"],
-.step2.swiper-slide-active a[data-slide="1"],
-.step3.swiper-slide-active a[data-slide="2"] {
+.step1.active a[data-slide="2"],
+.step2.active a[data-slide="3"],
+.step3.active a[data-slide="4"] {
     opacity: 1;
+}
+@media only screen and (max-width: 1500px) {
+    .mainBlock {
+        font-size: 12px;
+    }
 }
