--- a/style/style.less
+++ b/style/style.less
@@ -1,233 +1,351 @@
 @color1: #3ddb84;
 @color2: #092f42;
+
+@font-face {
+  font-family: "agb";
+  src: url("../fonts/huge_agb-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 body {
-    margin: 0;
-    padding: 0;
-    font-family: "Heebo", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Heebo", sans-serif;
 }
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.btn {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 0.8em 3em;
+  font-size: 1.7em;
+  border-radius: 2em;
+  font-weight: bold;
+  border-width: 0.3em;
+  border-style: solid;
+  transition: background-color 0.4s, color 0.4s;
+  &.btnColor1 {
+    background-color: @color1;
+    border-color: @color1;
+    color: @color2;
+    &:hover {
+      background-color: @color2;
+      color: @color1;
+    }
+  }
 }
 
 .mainBlock {
-    &.noTransit {
-        transition:  none !important;
+  &.noTransit {
+    transition: none !important;
+  }
+  section {
+    min-height: 100vh;
+    background-color: #f7f7f7;
+    padding: 0;
+  }
+  i.circle {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: auto;
+    width: 95vh;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: 0;
+    &:before {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
     }
-    section {
-        min-height: 100vh;
-        background-color: #f7f7f7;
-        padding: 0;
-    }
-    i.circle {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        margin: auto;
-        width: 90vh;
-        border-radius: 50%;
-        pointer-events: none;
-        z-index: 0;
-        &:before {
-            content: '';
-            display: block;
-            padding-bottom: 100%;
-        }
-    }
-    .contentWrapper {
-        position: relative;
-        width: 50%;
-        margin: auto;
-        height: 100%;
-    }
+  }
+  .contentWrapper {
+    position: relative;
+    width: 95vh;
+    margin: auto;
+    height: 100%;
+  }
 }
 
 .sectionWelcome {
-    i.circle {
-        background-color: @color1;
+  i.circle {
+    background-color: @color1;
+  }
+  .contentWrapper {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  figure {
+    margin: 0 0 1em;
+    width: 50%;
+  }
+  img {
+    width: 100%;
+  }
+  h1 {
+    color: @color2;
+    font-family: "agb";
+    font-size: 4em;
+    line-height: 1.1;
+    margin: 0;
+  }
+  p {
+    color: @color2;
+    opacity: 0.4;
+    font-family: "agb";
+    font-size: 1.5em;
+    line-height: 1.4;
+    font-weight: bold;
+  }
+  .customerCount {
+    background-color: #fff;
+    font-size: 1.1em;
+    color: @color2;
+    border-radius: 50%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 1em 2em rgba(0, 0, 0, 0.5);
+    font-style: normal;
+    width: 10em;
+    height: 10em;
+    right: 2%;
+    bottom: 8%;
+    img {
+      width: 2.5em;
+      margin: 0 0 0.5em;
     }
-    .contentWrapper {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+    strong {
+      display: block;
+      font-size: 2.3em;
+      line-height: 1;
     }
-    h1 {
-        color: @color2;
-        font-size: 4.5em;
-        line-height: 1.1;
-        margin: 0;
+    small {
+      font-weight: bold;
+      opacity: 0.4;
     }
-    p {
-        color: @color2;
-        opacity: 0.4;
-        font-size: 1.5em;
-        line-height: 1.4;
-        font-weight: bold;
-    }
-    .customerCount {
-        background-color: #fff;
-        font-size: 1.2em;
-        color: @color2;
-        border-radius: 50%;
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        box-shadow: 0 1em 2em rgba(0, 0, 0, 0.5);
-        font-style: normal;
-        width: 10em;
-        height: 10em;
-        right: 0;
-        bottom: 10%;
-        strong {
-            display: block;
-            font-size: 2.3em;
-            line-height: 1;
-        }
-        small {
-            font-weight: bold;
-            opacity: 0.4;
-        }
-    }
+  }
 }
 
 .sectionPreview {
-    i.circle {
-        background-color: @color1;
+  i.circle {
+    background-color: @color2;
+  }
+  .contentWrapper {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: @color1;
+  }
+  h2 {
+    font-size: 3.5em;
+    font-family: "agb";
+    line-height: 1.1;
+    margin: 0;
+  }
+  .liveControl {
+    color: #fff;
+    margin: 1em 0;
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+  .livePreviewBox {
+    display: flex;
+    align-items: flex-start;
+    margin: 2em 0 0;
+    transform: translateX(-8%);
+    figure {
+      width: 100%;
+      margin: 0;
+      border-radius: 1em;
+      overflow: hidden;
+      box-shadow: 0 1em 2em rgba(0, 0, 0, 0.5);
     }
-    .contentWrapper {
-        width: 90vh;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        color: @color2;
-    }
-    h2 {
-        font-size: 4.5em;
-        line-height: 1.1;
-        margin: 0;
-    }
-    .liveControl {
-        margin: 1em 0;
-        font-size: 1.2em;
-        font-weight: bold;
-    }
-    .livePreviewBox {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        > * {
-            flex-shrink: 0;
-        }
-        figure {
-            margin: 0;
-            background-color: #ccc;
-            border-radius: 1em;
-            overflow: hidden;
-            &:before {
-                content: '';
-                display: block;
-                padding-bottom: 50%;
-            }
-        }
+    img {
+      width: 100%;
+      vertical-align: middle;
     }
     .livePreview {
-        width: 60%;
+      min-width: 60%;
+      width: 60%;
     }
     .campaignPoints {
-        width: 40%;
-        text-align: left;
+      padding-left: 3em;
+      text-align: left;
+      min-width: 40%;
+      width: 40%;
+      color: #fff;
     }
+    > * {
+      flex-shrink: 0;
+    }
+  }
 }
 
 section.sectionReady {
+  background-color: @color2;
+  i.circle {
+    background: conic-gradient(rgba(11, 77, 109, 0), rgba(11, 77, 109, 1));
+    width: 90vh;
+  }
+  .contentWrapper {
+    background-clip: content-box;
     background-color: @color2;
-    i.circle {
-        background: conic-gradient(rgba(11,77,109,0), rgba(11,77,109,1));
-    }
-    .contentWrapper {
-        background-clip: content-box;
-        background-color: @color2;
-        color: #fff;
-        display: flex;
-        width: 90vh;
-        height: 90vh;
-        border-radius: 50%;
-        padding: 4em;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        overflow: hidden;
-    }
-    h3 {
-        font-size: 4.5em;
-    }
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    width: 90vh;
+    height: 90vh;
+    border-radius: 50%;
+    padding: 3.5em;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+  }
+  h3 {
+    font-size: 3.8em;
+    font-family: "agb";
+  }
+  .btn {
+    font-size: 1.3em;
+    display: block;
+    width: 50%;
+    max-width: 350px;
+  }
 }
 
 .sectionSetup {
-    i.circle {
-        background-color: @color2;
+  i.circle {
+    background-color: @color2;
+  }
+  .contentWrapper {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  h2 {
+    font-size: 3.5em;
+    font-family: "agb";
+    line-height: 1.1;
+    margin: 0;
+    color: @color1;
+  }
+  h4 {
+    color: #fff;
+    opacity: 0.3;
+    font-family: "agb";
+    font-size: 1.2em;
+    line-height: 1.6;
+    margin: 0.8em 0;
+  }
+  nav {
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 1em 2em;
+    border-radius: 2em;
+    font-size: 0.8em;
+    margin: 1em 0;
+    a {
+      color: #fff;
+      text-decoration: none;
+      text-transform: uppercase;
+      opacity: 0.5;
+      &:not(:last-child):after {
+        content: ">";
+        display: inline-block;
+        margin: 0 1em;
+      }
     }
-    .contentWrapper {
-        width: 90vh;
-        text-align: center;
+  }
+  .setupSteps {
+    opacity: 0;
+    transition: opacity 1.5s;
+    display: flex;
+    align-items: flex-start;
+    margin: 4em 0 0;
+    transform: translateX(-8%);
+    figure {
+      min-width: 60%;
+      margin: 0;
+      border-radius: 1em;
+      overflow: hidden;
+      box-shadow: 0 1em 2em rgba(0, 0, 0, 0.5);
+    }
+    img {
+      width: 100%;
+      vertical-align: middle;
+    }
+    .stepInfo {
+      padding-left: 4em;
+      text-align: left;
+      min-width: 40%;
+
+      i {
+        color: @color2;
+        width: 2.5em;
         display: flex;
-        flex-direction: column;
+        height: 2.5em;
+        border-radius: 50%;
+        background: @color1;
         align-items: center;
+        font-style: normal;
         justify-content: center;
-    }
-    h2 {
-        font-size: 4.5em;
-        line-height: 1.1;
-        margin: 0;
+        font-family: "agb";
+        font-size: 1.1em;
+      }
+      h5 {
+        font-family: "agb";
         color: @color1;
-    }
-    h4 {
-        color: #fff;
-        opacity: 0.3;
-        font-size: 1.3em;
-        line-height: 1.4;
-        margin: 0.8em 0;
-    }
-    nav {
-        background-color: rgba(255, 255, 255, 0.2);
-        padding: 1em 2em;
-        border-radius: 2em;
-        font-size: 0.8em;
-        a {
-            color: #fff;
-            text-decoration: none;
-            text-transform: uppercase;
-            opacity: 0.5;
-            &:not(:last-child):after {
-                content: '>';
-                display: inline-block;
-                margin: 0 1em;
-            }
+        font-size: 1.5em;
+        margin: 1em 0;
+        &:after {
+          content: "";
+          display: block;
+          height: 0.15em;
+          width: 50%;
+          background-color: rgba(255, 255, 255, 0.2);
+          margin: 0.7em 0 0;
         }
+      }
+      p {
+        color: #fff;
+        opacity: 0.5;
+        font-size: 0.9em;
+        padding-right: 20%;
+      }
     }
-    .setupSteps {
-        font-size: 3em;
-        color: @color1;
-        padding: 2em 0;
-        opacity: 0;
-        transition: opacity 1.5s;
-    }
-    &.active .setupSteps {opacity: 1;}
+  }
+  &.active .setupSteps {
+    opacity: 1;
+  }
 }
 .step1.active a[data-slide="2"],
 .step2.active a[data-slide="3"],
 .step3.active a[data-slide="4"] {
-    opacity: 1;
+  opacity: 1;
 }
 @media only screen and (max-width: 1500px) {
-    .mainBlock {
-        font-size: 12px;
+  .mainBlock {
+    font-size: 12px;
+    .contentWrapper,
+    i.circle {
+      width: 95vh;
     }
+    .sectionWelcome .contentWrapper {
+      font-size: 0.8em;
+    }
+  }
 }
